fix: adjust vertical spacing and refactor container styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,9 @@ p {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.features-subtitle {
+  margin-bottom: 8px;
+}
 .features-item {
   width: calc((100% - 72px) / 4);
 }
@@ -275,6 +278,10 @@ p {
   column-gap: 24px;
   row-gap: 48px;
 }
+.portfolio-title {
+  margin-bottom: 72px;
+  text-align: center;
+}
 .portfolio-item {
   width: calc((100% - 48px) / 3);
 }
@@ -301,6 +308,7 @@ p {
   letter-spacing: 0.03em;
   width: 1158px;
   display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-text {
   font-weight: 400;
@@ -309,6 +317,9 @@ p {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 /* footer */
